crates/plotnik-tests/tests/05-typegen/alternations/error_conflicting_capture_types_across_branches.txt
Q = [
  (identifier) @x
  (number)* @x
]
------------------ DIAGNOSTICS -------------------
error: capture `@x` has incompatible types across branches
 --> query.ptk:2:16
  |
2 |   (identifier) @x
  |                ^^
3 |   (number)* @x
  |             -- and a different type here
  |
help: make every branch produce the same type, or label the branches for an enum
